kubernetes_azure/worker-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: vehcal.azurecr.io/worker:latest
        ports:
        - containerPort: 4567
